fixed mobiel nav collapse

--- a/app.css
+++ b/app.css
@@ -113,6 +113,7 @@ a {
 /* ------------------- */
 
 .main-nav {
+  width: 100%;
   max-width: 2000px;
   margin: 0 auto;
   position: absolute;
@@ -181,6 +182,7 @@ a {
 @media (min-width: 700px) {
 
   .main-nav {
+    width: auto;
     justify-content: flex-start;
     left: 5%;
   }
